--- a/App19.SciChart/Views/PageAudioAnalyzer.xaml
+++ b/App19.SciChart/Views/PageAudioAnalyzer.xaml
@@ -1,23 +1,17 @@
-﻿<Window x:Class="App19.SciChart00.Views.AudioAnalyzerWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
-        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:vm="clr-namespace:App19.SciChart00.ViewModels"
-        xmlns:audio="clr-namespace:App19.SciChart00.Audio"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance vm:AudioAnalyzerViewModel , IsDesignTimeCreatable=True}"
-        Title="Audio Analyzer" Height="450" Width="800">
+﻿<UserControl x:Class="App19.SciChart00.Views.PageAudioAnalyzer"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:audio="clr-namespace:App19.SciChart00.Audio"
+             mc:Ignorable="d"
+             Background="{DynamicResource PrimaryHueLightBrush}"
+             d:DesignHeight="300" d:DesignWidth="300">
     <!-- Note Visual Xccelerator Engine (DirectX is enabled in App.Xaml). You have to do this explicitly in your applications -->
-    <Window.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary
-                    Source="/SciChart.Examples.ExternalDependencies;component/Resources/Styles/ToolbarButtonsCommon.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-
             <s:GradientStopsToLinearGradientBrushConverter x:Key="ColorsToLinearGradientBrushConverter" />
 
             <Style x:Key="AxisStyle" TargetType="s:AxisBase">
@@ -44,7 +38,7 @@
                 </Setter>
             </Style>
         </ResourceDictionary>
-    </Window.Resources>
+    </UserControl.Resources>
 
     <b:Interaction.Triggers>
         <b:EventTrigger EventName="Loaded">
@@ -191,4 +185,4 @@
                       Width="200" />
         </WrapPanel>
     </Grid>
-</Window>
+</UserControl>
