--- a/App19.SciChart/Views/MainWindow.xaml
+++ b/App19.SciChart/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:md="clr-namespace:App19.SciChart00.Models"
         xmlns:vm="clr-namespace:App19.SciChart00.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
+        d:DataContext="{d:DesignInstance vm:MainViewModel}"
         SizeChanged="Window_SizeChanged"
         Style="{StaticResource MaterialDesignWindow}"
         Background="Transparent"
