--- a/App19.SciChart/Views/PageAudioAnalyzer.xaml
+++ b/App19.SciChart/Views/PageAudioAnalyzer.xaml
@@ -6,8 +6,10 @@
              xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:audio="clr-namespace:App19.SciChart00.Audio"
+             xmlns:vm="clr-namespace:App19.SciChart00.ViewModels"
              mc:Ignorable="d"
              Background="{DynamicResource PrimaryHueLightBrush}"
+             d:DataContext="{d:DesignInstance vm:AudioAnalyzerViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
     <!-- Note Visual Xccelerator Engine (DirectX is enabled in App.Xaml). You have to do this explicitly in your applications -->
     <UserControl.Resources>
@@ -180,8 +182,8 @@
 
         <WrapPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5">
             <ComboBox ItemsSource="{Binding AvailableDevices}"
-                      SelectedIndex="{Binding SelectedIndex}"
-                      DisplayMemberPath="DisplayName"
+                      SelectedValue="{Binding SelectedDeviceId}"
+                      DisplayMemberPath="DisplayName" SelectedValuePath="ID"
                       Width="200" />
         </WrapPanel>
     </Grid>
