--- a/App19.SciChart/App.xaml
+++ b/App19.SciChart/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="App19.SciChart00.App"
+﻿<Application x:Class="App19.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
@@ -12,6 +12,10 @@
                     Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
                 <!-- Other merged dictionaries here -->
+                <ResourceDictionary
+                    Source="/SciChart.Examples.ExternalDependencies;component/Resources/Styles/SciChartExampleToolbar.xaml" />
+                <ResourceDictionary
+                    Source="/SciChart.Examples.ExternalDependencies;component/Resources/Styles/MergedResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <!-- Other app resources here -->
