--- a/App19.SciChart/Views/MainWindow.xaml
+++ b/App19.SciChart/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="App19.SciChart00.Views.MainWindow"
+﻿<Window x:Class="App19.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:md="clr-namespace:App19.SciChart00.Models"
-        xmlns:vm="clr-namespace:App19.SciChart00.ViewModels"
+        xmlns:md="clr-namespace:App19.Models"
+        xmlns:vm="clr-namespace:App19.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel}"
         SizeChanged="Window_SizeChanged"
