--- a/App19.SciChart/Views/PageAudioAnalyzer.xaml
+++ b/App19.SciChart/Views/PageAudioAnalyzer.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="App19.SciChart00.Views.PageAudioAnalyzer"
+﻿<UserControl x:Class="App19.Views.PageAudioAnalyzer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:s="http://schemas.abtsoftware.co.uk/scichart"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:audio="clr-namespace:App19.SciChart00.Audio"
-             xmlns:vm="clr-namespace:App19.SciChart00.ViewModels"
+             xmlns:audio="clr-namespace:App19.Audio"
+             xmlns:vm="clr-namespace:App19.ViewModels"
              mc:Ignorable="d"
              Background="{DynamicResource PrimaryHueLightBrush}"
              d:DataContext="{d:DesignInstance vm:AudioAnalyzerViewModel}"
