--- a/App19.SciChart/Views/PageLineChart.xaml
+++ b/App19.SciChart/Views/PageLineChart.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="App19.SciChart00.Views.PageLineChart"
+﻿<UserControl x:Class="App19.Views.PageLineChart"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,68 +16,109 @@
         </LinearGradientBrush>
     </UserControl.Resources>
     <Grid>
-        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
-            <s:SciChartSurface x:Name="sciChart2" Margin="5" Width="400" Height="350">
+        <ScrollViewer>
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
+                <!--  Create the chart surface  -->
+                <s:SciChartSurface Name="sciChart" Margin="5" Width="500" Height="350">
 
-                <s:SciChartSurface.RenderableSeries>
-                    <s:FastMountainRenderableSeries x:Name="MountainSeries0" Stroke="#4682b4"
-                                                    StrokeThickness="5"
-                                                    Fill="{StaticResource MountainChartFill}" />
-                    <s:XyScatterRenderableSeries x:Name="ScatterSeries0">
-                        <s:EllipsePointMarker Width="7" Height="7" Stroke="#366294" Fill="White" />
-                    </s:XyScatterRenderableSeries>
-                </s:SciChartSurface.RenderableSeries>
+                    <!--  Declare RenderableSeries  -->
+                    <s:SciChartSurface.RenderableSeries>
+                        <s:FastColumnRenderableSeries x:Name="columnSeries" DataPointWidth="0.8">
+                            <s:FastColumnRenderableSeries.Fill>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                    <GradientStop Offset="0" Color="LightSteelBlue" />
+                                    <GradientStop Offset="1.0" Color="SteelBlue" />
+                                </LinearGradientBrush>
+                            </s:FastColumnRenderableSeries.Fill>
 
-                <s:SciChartSurface.XAxis>
-                    <s:NumericAxis DrawMajorGridLines="False"
-                                   DrawMinorGridLines="False"
-                                   DrawMajorBands="True" />
-                </s:SciChartSurface.XAxis>
+                            <s:FastColumnRenderableSeries.SeriesAnimation>
+                                <s:WaveAnimation AnimationDelay="0:0:1" Duration="0:0:3" PointDurationFraction="0.2" />
+                            </s:FastColumnRenderableSeries.SeriesAnimation>
 
-                <s:SciChartSurface.YAxis>
-                    <s:NumericAxis GrowBy="0,0.1" MaxAutoTicks="5"
-                                   DrawMajorGridLines="True"
-                                   DrawMinorGridLines="False"
-                                   DrawMajorBands="False" />
-                </s:SciChartSurface.YAxis>
+                        </s:FastColumnRenderableSeries>
+                    </s:SciChartSurface.RenderableSeries>
 
-            </s:SciChartSurface>
+                    <!--  Create an X Axis  -->
+                    <s:SciChartSurface.XAxis>
+                        <s:NumericAxis AxisTitle="Sample No" DrawMajorBands="False" />
+                    </s:SciChartSurface.XAxis>
 
-            <s:SciChartSurface x:Name="sciChart3" Margin="5" Width="400" Height="350">
+                    <!--  Create a Y Axis with GrowBy  -->
+                    <s:SciChartSurface.YAxis>
+                        <s:NumericAxis AxisTitle="Value" GrowBy="0,0.1" DrawMajorBands="False" />
+                    </s:SciChartSurface.YAxis>
 
-                <s:SciChartSurface.RenderableSeries>
-                    <s:FastMountainRenderableSeries x:Name="MountainSeries1" Stroke="#4682b4"
-                                                    StrokeThickness="5"
-                                                    Fill="{StaticResource MountainChartFill}" />
-                    <s:XyScatterRenderableSeries x:Name="ScatterSeries1">
-                        <s:EllipsePointMarker Width="7" Height="7" Stroke="#366294" Fill="White" />
-                    </s:XyScatterRenderableSeries>
-                </s:SciChartSurface.RenderableSeries>
+                    <s:SciChartSurface.ChartModifier>
+                        <s:ModifierGroup>
+                            <s:RubberBandXyZoomModifier />
+                            <s:ZoomExtentsModifier />
+                        </s:ModifierGroup>
+                    </s:SciChartSurface.ChartModifier>
 
-                <!--  Add a DateTime XAxis  -->
-                <s:SciChartSurface.XAxis>
-                    <s:DateTimeAxis x:Name="xAxis" TextFormatting="MM月" GrowBy="0.01, 0.01" MaxAutoTicks="14" />
-                </s:SciChartSurface.XAxis>
+                </s:SciChartSurface>
 
-                <s:SciChartSurface.YAxis>
-                    <s:NumericAxis GrowBy="0,0.1" MaxAutoTicks="5"
-                                   DrawMajorGridLines="True"
-                                   DrawMinorGridLines="False"
-                                   DrawMajorBands="False" />
-                </s:SciChartSurface.YAxis>
+                <s:SciChartSurface x:Name="sciChart2" Margin="5" Width="500" Height="350">
 
-                <!--  Create and enable ChartModifiers through bindings  -->
-                <s:SciChartSurface.ChartModifier>
-                    <s:ModifierGroup>
-                        <s:CursorModifier x:Name="CursorMod"
-                                          ReceiveHandledEvents="True"
-                                          ShowAxisLabels="True" />
+                    <s:SciChartSurface.RenderableSeries>
+                        <s:FastMountainRenderableSeries x:Name="MountainSeries0" Stroke="#4682b4"
+                                                        StrokeThickness="5"
+                                                        Fill="{StaticResource MountainChartFill}" />
+                        <s:XyScatterRenderableSeries x:Name="ScatterSeries0">
+                            <s:EllipsePointMarker Width="7" Height="7" Stroke="#366294" Fill="White" />
+                        </s:XyScatterRenderableSeries>
+                    </s:SciChartSurface.RenderableSeries>
 
-                        <s:ZoomExtentsModifier ExecuteOn="MouseDoubleClick" />
-                    </s:ModifierGroup>
-                </s:SciChartSurface.ChartModifier>
+                    <s:SciChartSurface.XAxis>
+                        <s:NumericAxis DrawMajorGridLines="False"
+                                       DrawMinorGridLines="False"
+                                       DrawMajorBands="True" />
+                    </s:SciChartSurface.XAxis>
 
-            </s:SciChartSurface>
-        </StackPanel>
+                    <s:SciChartSurface.YAxis>
+                        <s:NumericAxis GrowBy="0,0.1" MaxAutoTicks="5"
+                                       DrawMajorGridLines="True"
+                                       DrawMinorGridLines="False"
+                                       DrawMajorBands="False" />
+                    </s:SciChartSurface.YAxis>
+
+                </s:SciChartSurface>
+
+                <s:SciChartSurface x:Name="sciChart3" Margin="5" Width="500" Height="350">
+
+                    <s:SciChartSurface.RenderableSeries>
+                        <s:FastMountainRenderableSeries x:Name="MountainSeries1" Stroke="#4682b4"
+                                                        StrokeThickness="5"
+                                                        Fill="{StaticResource MountainChartFill}" />
+                        <s:XyScatterRenderableSeries x:Name="ScatterSeries1">
+                            <s:EllipsePointMarker Width="7" Height="7" Stroke="#366294" Fill="White" />
+                        </s:XyScatterRenderableSeries>
+                    </s:SciChartSurface.RenderableSeries>
+
+                    <!--  Add a DateTime XAxis  -->
+                    <s:SciChartSurface.XAxis>
+                        <s:DateTimeAxis x:Name="xAxis" TextFormatting="MM月" GrowBy="0.01, 0.01" MaxAutoTicks="14" />
+                    </s:SciChartSurface.XAxis>
+
+                    <s:SciChartSurface.YAxis>
+                        <s:NumericAxis GrowBy="0,0.1" MaxAutoTicks="5"
+                                       DrawMajorGridLines="True"
+                                       DrawMinorGridLines="False"
+                                       DrawMajorBands="False" />
+                    </s:SciChartSurface.YAxis>
+
+                    <!--  Create and enable ChartModifiers through bindings  -->
+                    <s:SciChartSurface.ChartModifier>
+                        <s:ModifierGroup>
+                            <s:CursorModifier x:Name="CursorMod"
+                                              ReceiveHandledEvents="True"
+                                              ShowAxisLabels="True" />
+
+                            <s:ZoomExtentsModifier ExecuteOn="MouseDoubleClick" />
+                        </s:ModifierGroup>
+                    </s:SciChartSurface.ChartModifier>
+
+                </s:SciChartSurface>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
