--- a/App18.Material/Views/PageDemo1.xaml
+++ b/App18.Material/Views/PageDemo1.xaml
@@ -5,21 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:App18.Material.ViewModels"
              xmlns:md="clr-namespace:App18.Material.Models"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              Background="{DynamicResource PrimaryHueLightBrush}"
              d:DataContext="{d:DesignInstance viewModels:Demo1ViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Margin="{StaticResource ControlPageContentMargin}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="270" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <ListBox ItemsSource="{Binding Demo1Items}"
                  SelectedIndex="{Binding SelectedIndex}"
                  SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}"
-                 Margin="10,16,10,0"
+                 Margin="0,0,0,25"
                  Grid.Column="0">
             <ListBox.Resources>
                 <Style TargetType="ScrollViewer"
@@ -31,19 +31,118 @@
                 </DataTemplate>
             </ListBox.Resources>
             <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem"
-                       BasedOn="{StaticResource MaterialDesign3.NavigationDrawerPrimaryListBoxItem}">
-                    <Setter Property="materialDesign:NavigationDrawerAssist.SelectedIcon"
-                            Value="{Binding SelectedIcon}" />
-                    <Setter Property="materialDesign:NavigationDrawerAssist.UnselectedIcon"
-                            Value="{Binding UnselectedIcon}" />
-                    <Setter Property="Width" Value="260" />
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border Background="{DynamicResource MaterialDesignPaper}" Width="250"
+                                        HorizontalAlignment="Left" CornerRadius="4" Margin="0,0,0,10">
+                                    <Border.Triggers>
+                                        <EventTrigger RoutedEvent="MouseEnter">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation Duration="0:0:0.2" To="#40444444"
+                                                                    Storyboard.TargetName="PART_Shadow"
+                                                                    Storyboard.TargetProperty="Color" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="5"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="BlurRadius" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="10"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="ShadowDepth" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="0.6"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="Opacity" />
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                        <EventTrigger RoutedEvent="MouseLeave">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation Duration="0:0:0.2" To="#AA444444"
+                                                                    Storyboard.TargetName="PART_Shadow"
+                                                                    Storyboard.TargetProperty="Color" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="5"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="BlurRadius" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="4"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="ShadowDepth" />
+                                                    <DoubleAnimation Duration="0:0:0.2" To="0.5"
+                                                                     Storyboard.TargetName="PART_Shadow"
+                                                                     Storyboard.TargetProperty="Opacity" />
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </Border.Triggers>
+                                    <Border.Effect>
+                                        <DropShadowEffect x:Name="PART_Shadow" Color="#AA444444" BlurRadius="5"
+                                                          ShadowDepth="4" Opacity="0.5" />
+                                    </Border.Effect>
+                                    <Grid Width="260" HorizontalAlignment="Left">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <!-- 选中效果 -->
+                                        <TextBlock x:Name="PART_Bar" Width="5" Visibility="Hidden" Margin="3,5,0,5"
+                                                   Background="{DynamicResource PrimaryHueMidBrush}"
+                                                   Grid.Column="0" />
+
+                                        <Grid Height="60" Grid.Column="1">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="50" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Border VerticalAlignment="Center" Grid.Column="0">
+                                                <md3:PackIcon x:Name="PART_Icon"
+                                                              Kind="{Binding UnselectedIcon}"
+                                                              Margin="5,0,5,0" Height="35" Width="35" />
+                                            </Border>
+
+                                            <Grid Grid.Column="1" VerticalAlignment="Center">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="*" />
+                                                    <RowDefinition Height="*" />
+                                                </Grid.RowDefinitions>
+                                                <TextBlock
+                                                    Text="{Binding Name}"
+                                                    FontWeight="SemiBold"
+                                                    FontSize="12"
+                                                    Style="{DynamicResource BaseTextBlockStyle}"
+                                                    Margin="1"
+                                                    TextTrimming="CharacterEllipsis"
+                                                    TextWrapping="NoWrap"
+                                                    HorizontalAlignment="Left"
+                                                    Grid.Row="0" />
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <!-- <Setter Property="Margin" Value="-3,-3,0,0"/> -->
+                                        <!-- <Setter Property="Padding" Value="3,3,3,3"/> -->
+                                        <Setter Property="RenderTransform">
+                                            <Setter.Value>
+                                                <ScaleTransform ScaleX="1.02" ScaleY="1.02" />
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="PART_Bar" Property="Visibility" Value="Visible" />
+                                        <Setter TargetName="PART_Icon" Property="md3:PackIcon.Kind"
+                                                Value="{Binding SelectedIcon}" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-        <ContentControl Margin="{Binding MarginRequirement, FallbackValue=16}"
-                        Content="{Binding Content, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}"
+        <ContentControl Content="{Binding Content, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}"
                         DataContext="{Binding SelectedItem}"
                         Grid.Column="1" />
     </Grid>
