--- a/App19.SciChart/Views/PageSketch.xaml
+++ b/App19.SciChart/Views/PageSketch.xaml
@@ -25,6 +25,7 @@
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
 
+                <!-- Chart 0 -->
                 <s:SciChartSurface x:Name="SciChart0" Margin="5" Width="500" Height="350"
                                    d:DataContext="{d:DesignInstance vm:Chart0ViewModel}"
                                    RenderableSeries="{s:SeriesBinding RenderableSeriesViewModels}"
@@ -76,7 +77,7 @@
                     </s:SciChartSurface.ChartModifier>
                 </s:SciChartSurface>
 
-                <!--  Create the chart surface  -->
+                <!-- Chart 1 -->
                 <s:SciChartSurface x:Name="SciChart1" Margin="5" Width="500" Height="350">
 
                     <!--  Declare RenderableSeries  -->
@@ -109,6 +110,7 @@
 
                 </s:SciChartSurface>
 
+                <!-- Chart 2 -->
                 <s:SciChartSurface x:Name="SciChart2" Margin="5" Width="500" Height="350">
 
                     <s:SciChartSurface.RenderableSeries>
@@ -140,6 +142,7 @@
 
                 </s:SciChartSurface>
 
+                <!-- Chart 3 -->
                 <s:SciChartSurface x:Name="SciChart3" Margin="5" Width="500" Height="350">
 
                     <s:SciChartSurface.RenderableSeries>
