增加水印背景演示

--- a/App20.Focus/App.xaml
+++ b/App20.Focus/App.xaml
@@ -7,6 +7,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <!-- Other merged dictionaries here -->
                 <ResourceDictionary Source="Resources/Icons.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Mar.Controls;component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
